--- a/src/WebUI/NgApp/src/app/counter/counter.component.html
+++ b/src/WebUI/NgApp/src/app/counter/counter.component.html
@@ -2,6 +2,8 @@
 
 <p>This is a simple example of an Angular component.</p>
 
-<p aria-live="polite">Current count: <strong>{{ currentCount }}</strong></p>
+<button class="btn btn-primary" (click)="decrementCounter()">Decrement</button>
+
+<p aria-live="polite">Current count: <strong>{{ Count$ | async }}</strong></p>
 
 <button class="btn btn-primary" (click)="incrementCounter()">Increment</button>
