--- a/src/WebUI/NgApp/src/app/fetch-data/fetch-data.component.html
+++ b/src/WebUI/NgApp/src/app/fetch-data/fetch-data.component.html
@@ -2,9 +2,9 @@
 
 <p>This component demonstrates fetching data from the server.</p>
 
-<p *ngIf="!forecasts"><em>Loading...</em></p>
+<p *ngIf="isLoading$ | async"><em>Loading...</em></p>
 
-<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="forecasts">
+<table class='table table-striped' aria-labelledby="tableLabel" *ngIf="!(isLoading$ | async)">
   <thead>
     <tr>
       <th>Date</th>
@@ -14,7 +14,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let forecast of forecasts">
+    <tr *ngFor="let forecast of forecasts$ | async">
       <td>{{ forecast.date }}</td>
       <td>{{ forecast.temperatureC }}</td>
       <td>{{ forecast.temperatureF }}</td>
@@ -22,3 +22,5 @@
     </tr>
   </tbody>
 </table>
+
+<div *ngIf="!(isLoading$ | async) && error$ | async">{{ error$ | async }}</div>
