--- a/src/WebUI/NgApp/src/app/todo/todo.component.html
+++ b/src/WebUI/NgApp/src/app/todo/todo.component.html
@@ -2,9 +2,9 @@
 
 <p>This is a complex todo list component.</p>
 
-<p *ngIf="!vm"><em>Loading...</em></p>
+<p *ngIf="isListLoading$ | async"><em>Loading...</em></p>
 
-<div *ngIf="vm">
+<div *ngIf="!(isListLoading$ | async) && (vm$ | async) as viewModel">
 
   <div class="row">
     <div class="col-sm-4">
@@ -16,8 +16,8 @@
         </button>
       </div>
       <ul class="list-group">
-        <li *ngFor="let list of vm.lists; index as i" class="list-group-item"
-          [ngClass]="{ 'active': selectedList == list }" (click)="selectedList = list">
+        <li *ngFor="let list of viewModel.lists; index as i" class="list-group-item"
+          [ngClass]="{ 'active': (selectedList$ | async) == list }" (click)="selectedList = list; selectedList$.next(list)">
           <div class="clearfix">
             <div class="float-left">
                 {{ list.title }}
@@ -29,26 +29,26 @@
         </li>
       </ul>
     </div>
-    <div class="col-sm-8" *ngIf="selectedList">
+    <div class="col-sm-8" *ngIf="selectedList$ | async as list">
       <div class="clearfix">
-        <h2 class="float-left">{{ selectedList.title }}</h2>
+        <h2 class="float-left">{{ list.title }}</h2>
         <button id="listOptions" class="btn btn-default float-right" title="List Options..."
           (click)="showListOptionsModal(listOptionsModalTemplate)">
           <fa-icon [icon]="faEllipsisH"></fa-icon>
         </button>
       </div>
       <ul id="todo-items" class="list-group mb-2">
-        <li class="list-group-item" *ngFor="let item of selectedList.items; index as i">
+        <li class="list-group-item" *ngFor="let item of list.items; index as i">
           <div class="d-flex">
             <div class="todo-item-checkbox">
               <input type="checkbox" [(ngModel)]="item.done" (change)="updateItem(item)" />
             </div>
             <div class="flex-fill">
-              <input id="{{ 'itemTitle' + i }}" *ngIf="item == selectedItem" type="text"
-                class="form-control item-input-control" [(ngModel)]="item.title" (keyup.enter)="updateItem(item, true)"
-                (blur)="updateItem(item)" autofocus="autofocus" />
-              <div class="todo-item-title" *ngIf="item != selectedItem" [ngClass]="{ 'done-todo': item.done }"
-                (click)="editItem(item, 'itemTitle' + i)" class="form-control item-input-control">
+              <input [name]="'itemTitle' + i" [id]="'itemTitle' + i" *ngIf="item == selectedItem" type="text" [value]="item.title"
+                class="form-control item-input-control" (input)="editTodoItem(item, $event.target)" (keyup.enter)="updateItem(item, true)"
+                (blur)="updateItem(item)" autofocus #itemInput />
+              <div class="todo-item-title form-control item-input-control" *ngIf="item != selectedItem" [ngClass]="{ 'done-todo': item.done }"
+                (click)="editItem(item, 'itemTitle' + i)">
                 <span>{{ item.title }}</span>
               </div>
             </div>
@@ -60,7 +60,7 @@
             </div>
           </div>
         </li>
-        <li class="list-group-item" (click)="addItem()">
+        <li class="list-group-item" (click)="addItem()" *ngIf="selectedList$ | async">
           <button class="btn btn-default">Add Item...</button>
         </li>
       </ul>
@@ -69,7 +69,7 @@
 </div>
 
 <div *ngIf="debug">
-  <pre>{{ vm | json }}</pre>
+  <pre>{{ (vm$ | async) | json }}</pre>
 </div>
 
 <ng-template #listOptionsModalTemplate>
